Fixed horizontal scrolling issue by removing horizontal scrolling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@ body{
     height: 100%;
     position: relative;
     font-family: 'Roboto', sans-serif;
-    overflow: scroll;
+    overflow-x: clip;
+    overflow-y: scroll;
 }
 
